# neith_ecs

./: .gitignore  CMakeLists.txt  README.md  \  compile_commands.json  ecs.cpp  ecs.h  main  main.cpp  perf.data  perf.data.old  run.sh
src/: CMakeLists.txt  ecs.h
src/include/: ecs.h  ecs2.h
test/: CMakeLists.txt  ecs_test.cpp
testapp/: CMakeLists.txt  main.cpp
